--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             };
 
             const brokerAddress = 'wss://broker.hivemq.com:8884/mqtt'; 
-            const topic = 'AerobitsMASSS'; 
+            const topic = 'Aerobits'; 
 
             const client = mqtt.connect(brokerAddress);
 
@@ -918,4 +918,5 @@
     </script>
 </body>
 </html>
+
 
