--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         }
         /* Left and right panel styling */
         .left-panel {
-            width: 30%; /* 30% of the screen */
+            width: 40%; /* 40% of the screen */
             display: flex;
             flex-direction: column;
             gap: 1rem;
         }
         .right-panel {
-            width: 70%; /* 70% of the screen */
+            width: 60%; /* 60% of the screen */
             display: flex;
             flex-direction: column;
             gap: 1rem;
         }
         /* Video container styling */
         .video-container {
-            flex-grow: 1; /* Takes up most space */
+            /* flex-grow: 1; Takes up most space - Removed flex-grow to allow aspect ratio */
             background-color: #1f2937;
             border-radius: 0.5rem;
             display: flex;
@@ -48,16 +48,45 @@
             color: #9ca3af;
             overflow: hidden; /* Ensures video fits within rounded corners */
             min-height: 0; /* Prevents flexbox overflow */
+            position: relative; /* Needed for absolute positioning of button */
+            width: 100%; /* Take full width of parent */
+            aspect-ratio: 4 / 3; /* Enforce 4:3 aspect ratio */
         }
         .video-container video {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Cover the container without losing aspect ratio */
+            object-fit: contain; /* Show entire video, potentially with black bars */
+            display: block; /* Remove extra space below video */
+        }
+         /* Fullscreen button styling */
+        #fullscreen-btn {
+            position: absolute;
+            top: 0.5rem;
+            right: 0.5rem;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            border-radius: 0.25rem;
+            padding: 0.25rem;
+            cursor: pointer;
+            opacity: 0.7;
+            transition: opacity 0.2s;
+            display: none; /* Hidden by default */
+        }
+        #fullscreen-btn:hover {
+            opacity: 1;
+        }
+        #fullscreen-btn svg {
+            width: 1rem; /* Adjust size as needed */
+            height: 1rem;
+            display: block;
         }
         /* Tilt container styling */
         .tilt-container {
-             height: 150px; /* Give the tilt animation a fixed height */
-             flex-shrink: 0; /* Prevent it from shrinking */
+             /* height: 150px; Give the tilt animation a fixed height - Removed */
+             flex-grow: 1; /* Allow it to fill remaining space */
+             min-height: 0; /* Prevent overflow */
+             /* flex-shrink: 0; - Removed as flex-grow handles this */
              background-color: #1f2937;
              border-radius: 0.5rem;
              display: flex;
@@ -150,6 +179,12 @@
         <!-- Left panel for video and tilt animation --><div class="left-panel">
             <div class="video-container" id="video-up-container">
                 <span>Video Player</span> <!-- Changed placeholder text -->
+                 <!-- Fullscreen Button added here -->
+                <button id="fullscreen-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3.75v4.5m0-4.5h4.5m-4.5 0L9 9M3.75 20.25v-4.5m0 4.5h4.5m-4.5 0L9 15M20.25 3.75h-4.5m4.5 0v4.5m0-4.5L15 9m5.25 11.25h-4.5m4.5 0v-4.5m0 4.5L15 15" />
+                    </svg>                      
+                </button>
             </div>
              <!-- Tilt Animation moved here -->
             <div class="tilt-container">
@@ -220,8 +255,9 @@
                     <button id="speed-btn" class="text-xs flex-1 bg-gray-600 hover:bg-gray-700 text-white font-bold py-1 px-3 rounded-lg transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>1x</button>
                     <button id="end-btn" class="text-xs flex-1 bg-gray-600 hover:bg-gray-700 text-white font-bold py-1 px-3 rounded-lg transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>End</button>
                 </div>
-                <!-- Row 3: Additional Controls (Blink) --><div class="flex justify-center items-center gap-4 w-full">
-                    <button id="blink-btn" class="text-xs flex-1 bg-blue-500 hover:bg-blue-600 text-white font-bold py-1 px-3 rounded-lg transition">Blink</button> <!-- Removed disabled attribute -->
+                <!-- Row 3: Additional Controls (Blink, Live) --><div class="flex justify-center items-center gap-4 w-full">
+                    <button id="blink-btn" class="text-xs flex-1 bg-blue-500 hover:bg-blue-600 text-white font-bold py-1 px-3 rounded-lg transition">Blink</button>
+                    <button id="live-mode-btn" class="text-xs flex-1 bg-green-600 hover:bg-green-700 text-white font-bold py-1 px-3 rounded-lg transition">Live : Off</button> <!-- New Live Button -->
                 </div>
             </footer>
         </div>
@@ -240,6 +276,7 @@
             const overlayText = document.getElementById('overlay-text');
             const videoUpContainer = document.getElementById('video-up-container');
             const tiltIndicator = document.getElementById('tilt-indicator');
+            const fullscreenBtn = document.getElementById('fullscreen-btn'); // Get fullscreen button
             
             // Playback control buttons
             const rewindBtn = document.getElementById('rewind-btn');
@@ -250,6 +287,7 @@
 
             // Live buttons
             const blinkBtn = document.getElementById('blink-btn'); 
+            const liveModeBtn = document.getElementById('live-mode-btn'); // Get Live Mode button
 
             // Modal elements
             const chartModal = document.getElementById('chart-modal');
@@ -441,6 +479,7 @@
                 [downloadCsvButton, dataModeButton].forEach(btn => btn.disabled = true);
                 resetCharts();
                 videoUpContainer.innerHTML = '<span>Video Player</span>'; // Updated placeholder
+                fullscreenBtn.style.display = 'none'; // Hide fullscreen button
                 // videoDownContainer.innerHTML = '<span>Down Video</span>'; // Removed
                 if(tiltIndicator) tiltIndicator.style.transform = 'rotate(0deg)';
                 
@@ -479,6 +518,7 @@
                                 videoElement.muted = true;
                                 videoUpContainer.innerHTML = ''; 
                                 videoUpContainer.appendChild(videoElement);
+                                fullscreenBtn.style.display = 'block'; // Show fullscreen button
                             });
                         }
                         if (!csvFound && zipEntry.name.toLowerCase().endsWith('.csv')) {
@@ -488,10 +528,12 @@
                     });
                      if (!videoFound) {
                         videoUpContainer.innerHTML = '<span>No video found in ZIP</span>';
+                         fullscreenBtn.style.display = 'none';
                     }
                 }).catch(err => {
                     console.error("Error reading zip file:", err);
                     videoUpContainer.innerHTML = '<span>Error reading ZIP</span>';
+                     fullscreenBtn.style.display = 'none';
                 });
             };
 
@@ -707,11 +749,12 @@
             client.on('connect', () => {
                 console.log('Connected to broker!');
                 blinkBtn.disabled = false; // Enable blink button on successful connection
+                // liveModeBtn is enabled by default, no need to enable here unless initially disabled
             });
 
             client.on('error', (err) => {
                 console.error('MQTT Connection Error:', err);
-                // Optionally disable the button again if connection fails
+                 // Optionally disable the blink button again if connection fails
                 // blinkBtn.disabled = true; 
             });
 
@@ -726,12 +769,50 @@
                 }
             }
 
+            // Toggle Live Mode Button Text
+            const toggleLiveMode = () => {
+                if (liveModeBtn.textContent === 'Live : Off') {
+                    liveModeBtn.textContent = 'Live : On';
+                    // Add logic to start live mode here later
+                    console.log("Live mode ON");
+                } else {
+                    liveModeBtn.textContent = 'Live : Off';
+                    // Add logic to stop live mode here later
+                    console.log("Live mode OFF");
+                }
+            }
+
+             // Fullscreen functionality
+            fullscreenBtn.addEventListener('click', () => {
+                const videoElement = videoUpContainer.querySelector('video');
+                if (!videoElement) return;
+
+                if (!document.fullscreenElement) {
+                    if (videoElement.requestFullscreen) {
+                        videoElement.requestFullscreen();
+                    } else if (videoElement.webkitRequestFullscreen) { /* Safari */
+                        videoElement.webkitRequestFullscreen();
+                    } else if (videoElement.msRequestFullscreen) { /* IE11 */
+                        videoElement.msRequestFullscreen();
+                    }
+                } else {
+                     if (document.exitFullscreen) {
+                        document.exitFullscreen();
+                    } else if (document.webkitExitFullscreen) { /* Safari */
+                        document.webkitExitFullscreen();
+                    } else if (document.msExitFullscreen) { /* IE11 */
+                        document.msExitFullscreen();
+                    }
+                }
+            });
+
             playPauseBtn.addEventListener('click', togglePlayPause);
             rewindBtn.addEventListener('click', () => seek(-5));
             forwardBtn.addEventListener('click', () => seek(5));
             speedBtn.addEventListener('click', changeSpeed);
             endBtn.addEventListener('click', handleEndReplayClick);
             blinkBtn.addEventListener('click', blinkLED); 
+            liveModeBtn.addEventListener('click', toggleLiveMode); // Add click listener for Live button
 
             downloadCsvButton.addEventListener('click', () => {
                 if (!telemetryData || telemetryData.length === 0) return;
