--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                 if(top === topicData){
                         console.log("Packet Received");
                         const msg = message.toString();
-                        const dataArray =  stringArray.map(msg.split(","));
+                        const dataArray = (msg.split(","));
 
                         console.log(dataArray);
                 }
@@ -1202,6 +1202,7 @@
     </script>
 </body>
 </html>
+
 
 
 
