--- a/index.html
+++ b/index.html
@@ -995,9 +995,8 @@
                                 'Auto Rotation 2': values[10],
                             };
 
-                            // Calculate derived raw values
-                            const pressureHpa = liveRawRow['Pressure'] / 100.0;
-                            liveRawRow['Altitude'] = (pressureHpa === null || pressureHpa <= 0) ? 0 : 44330 * (1 - Math.pow(pressureHpa / P0, 1 / 5.255));
+                            // Calculate derived raw values                        
+                            liveRawRow['Altitude'] = (pressureHpa === null || pressureHpa <= 0) ? 0 : 44330 * (1 - Math.pow(liveRawRow['Pressure'] / P0, 1 / 5.255));
                             liveRawRow['Velocity'] = calculateSingleVelocity(liveRawRow['Altitude']); // Use live velocity calc
 
                             // Calculate filtered values for this point
@@ -1429,4 +1428,5 @@
     </script>
 </body>
 </html>
+
 
